squid and nginx config for beta site; need to add in gbrowse config and purge legacy conf

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -54,6 +54,23 @@ http {
        # server unix:/tmp/wormbase.sock;
     }
 
+
+    upstream couchdb  {
+       server 206.108.125.165:5984 weight=10 max_fails=2000 fail_timeout=1m;
+#       server 206.108.125.164:5984 weight=10 max_fails=2000 fail_timeout=1m;
+#       server 206.108.125.163:5984 weight=10 max_fails=2000 fail_timeout=1m;
+#       server 206.108.125.162:5984 weight=10 max_fails=2000 fail_timeout=1m;
+#       server 206.108.125.166:5984 weight=10 max_fails=2000 fail_timeout=1m;
+#
+#       # 165 is our dedicated couch server, but we can use it as a backup if needed.
+#       server 206.108.125.165:5984 backup;
+
+       # Unix socket on localhost
+       # server unix:/tmp/wormbase.sock;
+    }
+
+
+
     sendfile        on;
     #tcp_nopush     on;
 
@@ -73,7 +90,6 @@ http {
 #      	   proxy_pass http://staging.wormbase.org:5984/;
 ##        }
 #   }
-
 
   server {
       server_name beta.wormbase.org;      
@@ -154,6 +170,13 @@ http {
           allow 127.0.0.1;
           deny all;
        }
+
+       # Disribute couchdb requests, coming in on port 80,
+       # and assuming that databases are called ws
+       location ~* ^/ws.* {
+           proxy_pass http://couchdb;
+       }
+
 
        location / {
 
