--- a/squid/etc/squid3-basic.conf
+++ b/squid/etc/squid3-basic.conf
@@ -610,8 +610,8 @@ acl CONNECT method CONNECT
 # Allow purging of cache objects from the localhost
 acl PURGE method purge
 
-
-acl PUT  method PUT
+# DISABLING: to be handled by nginx
+#acl PUT  method PUT
 
 # Access controls for our back end machines
 # This is the main website name, not the name of the proxy.
@@ -1589,7 +1589,7 @@ cache_peer 75.101.166.191 parent 9999 0 no-query no-digest originserver round-ro
 
 # Or via nginx
 cache_peer 206.108.125.175 parent 9000 0 no-query no-digest originserver round-robin name=beta-local
-cache_peer 206.108.125.165 parent 5984 0 no-query no-digest originserver round-robin name=couchdb
+#cache_peer 206.108.125.165 parent 5984 0 no-query no-digest originserver round-robin name=couchdb
 cache_peer 206.108.125.173 parent 8000 0 no-query no-digest originserver name=gb1-beta
 #cache_peer 206.108.125.174 parent 8000 0 no-query no-digest originserver round-robin name=gb2-beta
 
@@ -1631,12 +1631,13 @@ cache_peer_access gb1-beta allow gbrowse2-beta
 cache_peer_access gb1-beta allow gbrowse2_static-beta
 cache_peer_access gb1-beta deny all
 
-cache_peer_access couchdb allow PUT
-cache_peer_access couchdb deny all
+# Handled by nginx
+#cache_peer_access couchdb allow PUT
+#cache_peer_access couchdb deny all
 
 cache_peer_access beta-local  deny gbrowse2-beta
 cache_peer_access beta-local  deny gbrowse2_static-beta
-cache_peer_access beta-local  deny PUT
+#cache_peer_access beta-local  deny PUT
 cache_peer_access beta-local  allow beta-site
 cache_peer_access beta-local  deny all
 
