further config for beta; removing some old squid ACLs no longer in use

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -42,12 +42,21 @@ http {
        # TCP socket
        # server 127.0.0.1:20000   # or unix socket or hostname      
 
+       # web2,3,4,mining
+#       server 206.108.125.177:5000 weight=10 max_fails=2000 fail_timeout=1m;
+#       server 206.108.125.190:5000 weight=10 max_fails=2000 fail_timeout=1m;
+#       server 206.108.125.168:5000 weight=10 max_fails=2000 fail_timeout=1m;
+#       server 206.108.125.178:5000 weight=10 max_fails=2000 fail_timeout=1m;
+
+       # web7,8,9,10
        server 206.108.125.164:5000 weight=10 max_fails=2000 fail_timeout=1m;
        server 206.108.125.163:5000 weight=10 max_fails=2000 fail_timeout=1m;
        server 206.108.125.162:5000 weight=10 max_fails=2000 fail_timeout=1m;
        server 206.108.125.166:5000 weight=10 max_fails=2000 fail_timeout=1m;
 
-       # 165 is our dedicated couch server, but we can use it as a backup if needed.
+       # web1 () is our dedicated reverse proxy node.
+
+       # web6 (165) is our dedicated couch server, but we can use it as a backup if needed.
        server 206.108.125.165:5000 backup;
 
        # Unix socket on localhost
@@ -78,19 +87,6 @@ http {
     keepalive_timeout  65;
 
 
-    # CouchDB PUT requests
-    # This is now handled by Squid (and not locked down);
-    # ANYONE can PUT to beta.wormbase.org...
-#    server {
-#        listen 5984;
-#	server_name beta.wormbase.org;
-#	
-#	# Send all put requests to our core CouchDB server.
-##      	if ($request_method = PUT) {
-#      	   proxy_pass http://staging.wormbase.org:5984/;
-##        }
-#   }
-
   server {
       server_name beta.wormbase.org;      
       listen      9000;  # This will need to be updated to 80 when we aren't behind squid anymore.
@@ -100,17 +96,22 @@ http {
       # Error log; other directives: notice | info
       error_log  /usr/local/wormbase/logs/error.log warn;
 
+
+      # Enable gzip compression
+      # Turn off if we're sitting behind a caching server.
+#      gzip             on;
+#      gzip_min_length  1000;
+#      gzip_proxied     any;
+#      gzip_types       text/xml text/plain application/xml;
+
+      include       mime.types;
+      default_type  application/octet-stream;
+
       #############################################
       #
       # LOCKDOWN
       #
       #############################################      
-
-	# Send all put requests to our core CouchDB server.
-	# These are ONLY allowed in location / stanzas apparently.
-#      	if ($request_method = PUT) {
-#      	   proxy_pass http://206.108.125.165:5984/;
-#        }
 
       # Only requests to our Host are allowed
 #      if ($host !~ ^(wormbase.org|www.wormbase.org)$ ) {
@@ -137,18 +138,6 @@ http {
         proxy_pass http://blog.wormbase.org/;
       }
 
-
-
-      # Enable gzip compression
-      # Turn off if we're sitting behind a caching server.
-#      gzip             on;
-#      gzip_min_length  1000;
-#      gzip_proxied     any;
-#      gzip_types       text/xml text/plain application/xml;
-
-      include       mime.types;
-      default_type  application/octet-stream;
-
       #error_page  404              /404.html;
       # redirect server error pages to the static page /50x.html
       #
@@ -171,9 +160,17 @@ http {
           deny all;
        }
 
-       # Disribute couchdb requests, coming in on port 80,
-       # and assuming that databases are called ws
+       # COUCH
+       # Filter requests for our CouchDBs, assuming that dbs are named /ws*.
        location ~* ^/ws.* {
+
+           # Send all PUT requests to our core CouchDB server.
+       	   #      	if ($request_method = PUT) {
+	   #      	   proxy_pass http://206.108.125.165:5984/;
+	   #        }
+
+	   # Send all GETs/PUTs to the same server.
+	   # We COULD send PUTs to primary server above but distribute GETs here.
            proxy_pass http://couchdb;
        }
 
@@ -190,6 +187,9 @@ http {
             ########################################
             #  Pool of PSGI/Starman hosts
             ######################################## 
+	    # Explore these proxy and proxy cache directives.
+	    # Seems that some PUTs are getting cached instead of being sent directly
+	    # to the back end couch.
             proxy_set_header Host $http_host;
             proxy_set_header X-Forwarded-Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -200,7 +200,7 @@ http {
 	    proxy_pass http://wormbase;
 	    # Or to a local starman
 	    # proxy_pass http://localhost:5000;
-
+	    
 #           proxy_redirect   off;
    	    client_max_body_size            0;
             client_body_buffer_size         128k;
@@ -259,6 +259,20 @@ http {
 
        location /register.* {
             rewrite         ^/(.*)$ https://beta.wormbase.org:443/$1 permanent;
+        }
+
+
+        # GBrowse: Could also be localhost
+	location /tools/genome {
+             proxy_pass http://206.108.125.173:8000/tools/genome;
+         }
+
+        location /gbrowse2 {
+             proxy_pass http://206.108.125.173:8000/gbrowse2/;
+        }
+
+        location /gbrowse2/i/ {
+             proxy_pass http://206.108.125.173:8000/gbrowse2/i/;
         }
    }
 
