--- a/squid/etc/squid3-basic.conf
+++ b/squid/etc/squid3-basic.conf
@@ -1590,8 +1590,7 @@ cache_peer 75.101.166.191 parent 9999 0 no-query no-digest originserver round-ro
 # Or via nginx
 cache_peer 206.108.125.175 parent 9000 0 no-query no-digest originserver round-robin name=beta-local
 #cache_peer 206.108.125.165 parent 5984 0 no-query no-digest originserver round-robin name=couchdb
-cache_peer 206.108.125.173 parent 8000 0 no-query no-digest originserver name=gb1-beta
-#cache_peer 206.108.125.174 parent 8000 0 no-query no-digest originserver round-robin name=gb2-beta
+#cache_peer 206.108.125.173 parent 8000 0 no-query no-digest originserver name=gb1-beta
 
 
 # Data mining and gbrowse
@@ -1627,9 +1626,9 @@ cache_peer 206.108.125.189 parent 80 0 no-query no-digest originserver name=biom
 # The new web site
 
 # GBrowse2 (beta site; virtual host on gb1)
-cache_peer_access gb1-beta allow gbrowse2-beta
-cache_peer_access gb1-beta allow gbrowse2_static-beta
-cache_peer_access gb1-beta deny all
+#cache_peer_access gb1-beta allow gbrowse2-beta
+#cache_peer_access gb1-beta allow gbrowse2_static-beta
+#cache_peer_access gb1-beta deny all
 
 # Handled by nginx
 #cache_peer_access couchdb allow PUT
