--- a/log4perl/production.conf
+++ b/log4perl/production.conf
@@ -1,7 +1,7 @@
 # This is the WormBase Log4perl configuration file.
 
 # The root logger has a very low threshold for development
-log4perl.rootlogger=DEBUG, logfile
+log4perl.rootlogger=FATAL, logfile
 log4perl.appender.logfile=Log::Log4perl::Appender::File
 log4perl.appender.logfile.filename= sub { my $hostname = `hostname`; chomp $hostname ; return "logs/$hostname-catalyst.log" };
 log4perl.appender.logfile.mode=append
