added backup script of wormbase_user database, to be run once a day

--- a/conf/nginx-dev/nginx.conf
+++ b/conf/nginx-dev/nginx.conf
@@ -51,7 +51,7 @@ http {
 #
 #############################################
 server {
-       listen   8080;
+       listen   10000;
        server_name  dev.wormbase.org;
  
        access_log  /usr/local/wormbase/logs/nagios-acccess.log;
@@ -411,17 +411,20 @@ server {
         }
 
 	# GBrowse: Could also be localhost
-	location /tools/genome {
-	     proxy_pass http://206.108.125.173:8000/tools/genome;
-	 }
+#	location /tools/genome {
+#	     proxy_pass http://206.108.125.173:8000/tools/genome;
+##	     proxy_pass http://localhost:8080/tools/genome;
+#	 }
+#
+#	location /gbrowse2 {
+#	     proxy_pass http://localhost:8080/gbrowse2/;
+##	     proxy_pass http://206.108.125.173:8000/gbrowse2/;
+#	}
 
-	location /gbrowse2 {
-	     proxy_pass http://206.108.125.173:8000/gbrowse2/;
-	}
-
-	location /gbrowse2/i/ {
-	     proxy_pass http://206.108.125.173:8000/gbrowse2/i/;
-	}
+#	location /gbrowse2/i/ {
+#	     proxy_pass http://localhost:8080/gbrowse2/i/;
+##	     proxy_pass http://206.108.125.173:8000/gbrowse2/i/;
+#	}
 		
         location /css {
             root  /usr/local/wormbase/website/tharris/root;
@@ -516,14 +519,17 @@ server {
 	# GBrowse: Could also be localhost
 	location /tools/genome {
 	     proxy_pass http://206.108.125.173:8000/tools/genome;
+#	     proxy_pass http://localhost:8080/tools/genome;
 	 }
 
 	location /gbrowse2 {
-	     proxy_pass http://206.108.125.173:8000/gbrowse2/;
+	     proxy_pass http://localhost:8080/gbrowse2/;
+#	     proxy_pass http://206.108.125.173:8000/gbrowse2/;
 	}
 
 	location /gbrowse2/i/ {
-	     proxy_pass http://206.108.125.173:8000/gbrowse2/i/;
+	     proxy_pass http://localhost:8080/tools/gbrowse2/i/;
+#	     proxy_pass http://206.108.125.173:8000/gbrowse2/i/;
 	}
 		
         location /css {
