updated paths for log rotation

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -78,8 +78,6 @@ http {
        # server unix:/tmp/wormbase.sock;
     }
 
-
-
     sendfile        on;
     #tcp_nopush     on;
 
@@ -175,6 +173,23 @@ http {
        }
 
 
+        # GBrowse: Could also be localhost
+	# Need a better way of handling dynamic images.
+	location /tools/genome {
+	     # Gbrowse under Apache/FCGI
+             proxy_pass http://206.108.125.173:8000/tools/genome;
+
+	     # GBrowse under Plack
+	     # proxy_pass http://206.108.125.180:9001/tools/genome;
+         }
+
+	# GBrowse static files handled directly above.
+        location /gbrowse-static {
+             proxy_pass http://206.108.125.173:8000/gbrowse-static;
+	     #proxy_pass http://206.108.125.180:9001/gbrowse-static;
+        }
+
+
        location / {
 
             ########################################
@@ -233,9 +248,14 @@ http {
         location /js {
             root  /usr/local/wormbase/website/production/root;
         }
+
         location /img {
             root  /usr/local/wormbase/website/production/root;
         }
+
+#        location /gbrowse-static {
+#            root  /usr/local/wormbase/website/production/root/;
+#        }
 
         location /docs {
             root  /usr/local/wormbase/website/production/root;
@@ -252,28 +272,16 @@ http {
 #            rewrite         ^/(.*)$ https://localhost:443/$1 permanent;
 #        }
 
-        # Register and auth via ssl
-       location /auth/login {
-            rewrite         ^/(.*)$ https://beta.wormbase.org:443/$1 permanent;
-        }
+#        # Register and auth via ssl
+#        beta.wormbase.org: SSL not yet in place.
+#       location /auth/login {
+#            rewrite         ^/(.*)$ https://beta.wormbase.org:443/$1 permanent;
+#        }
+#
+#       location /register.* {
+#            rewrite         ^/(.*)$ https://beta.wormbase.org:443/$1 permanent;
+#        }
 
-       location /register.* {
-            rewrite         ^/(.*)$ https://beta.wormbase.org:443/$1 permanent;
-        }
-
-
-        # GBrowse: Could also be localhost
-	location /tools/genome {
-             proxy_pass http://206.108.125.173:8000/tools/genome;
-         }
-
-        location /gbrowse2 {
-             proxy_pass http://206.108.125.173:8000/gbrowse2/;
-        }
-
-        location /gbrowse2/i/ {
-             proxy_pass http://206.108.125.173:8000/gbrowse2/i/;
-        }
    }
 
 
@@ -298,9 +306,8 @@ http {
 
     # HTTPs for logging in.
     server {
-        listen       443;
+        listen       443 ssl;
         server_name  beta.wormbase.org;
-        ssl                  on;
         ssl_certificate      /usr/local/wormbase/website-admin/conf/nginx/server.crt;
         ssl_certificate_key  /usr/local/wormbase/website-admin/conf/nginx/server.key;
         ssl_session_timeout  5m;
@@ -315,8 +322,10 @@ http {
               proxy_set_header X-Real-IP $remote_addr;
               proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
               proxy_set_header X-Forwarded-Port 443; #this is important for Catalyst Apps!
-              #proxy_pass http://beta.wormbase.org:5000; #changed from http://localhost:5000/ which was causing double forward slash problems in the url
-	      proxy_pass http://wormbase; #changed from http://localhost:5000/ which was causing double forward slash problems in the url
+	      
+	      # changed from http://localhost:5000/ which was causing double forward slash problems in the url
+              #proxy_pass http://beta.wormbase.org:5000;
+	      proxy_pass http://wormbase;
          }
 
 #        location / {
