--- a/squid/etc/squid3-basic.conf
+++ b/squid/etc/squid3-basic.conf
@@ -646,11 +646,12 @@ acl biomart url_regex biomart martview
 acl gbrowse2        url_regex  gb2/gbrowse gbrowse2/i db/gb2 gbrowse_img gb2
 acl gbrowse2_static url_regex gbrowse2/images gb2-support gbrowse2/css gbrowse2/js
 
+# DEPRECATED
 # GBrowse2 (beta site)
 #gb2-support gbrowse2/css gbrowse2/js
 #browse2/i db/gb2 gbrowse_img gb2
-acl gbrowse2-beta        url_regex tools/genome  # cgi
-acl gbrowse2_static-beta url_regex gbrowse2/i    # images
+#acl gbrowse2-beta        url_regex tools/genome  # cgi
+#acl gbrowse2_static-beta url_regex gbrowse2/i    # images
 
 # Synteny Browser
 acl synteny url_regex gbrowse_syn synteny gbrowse/tmp/compara
@@ -1634,8 +1635,8 @@ cache_peer 206.108.125.189 parent 80 0 no-query no-digest originserver name=biom
 #cache_peer_access couchdb allow PUT
 #cache_peer_access couchdb deny all
 
-cache_peer_access beta-local  deny gbrowse2-beta
-cache_peer_access beta-local  deny gbrowse2_static-beta
+#cache_peer_access beta-local  deny gbrowse2-beta
+#cache_peer_access beta-local  deny gbrowse2_static-beta
 #cache_peer_access beta-local  deny PUT
 cache_peer_access beta-local  allow beta-site
 cache_peer_access beta-local  deny all
@@ -1671,8 +1672,8 @@ cache_peer_access beta-local  deny all
 # GBrowse2
 cache_peer_access gb1 allow gbrowse2
 cache_peer_access gb1 allow gbrowse2_static
-cache_peer_access gb1 deny gbrowse2-beta
-cache_peer_access gb1 deny gbrowse2_static-beta
+#cache_peer_access gb1 deny gbrowse2-beta
+#cache_peer_access gb1 deny gbrowse2_static-beta
 cache_peer_access gb1 deny all
 #cache_peer_access gb2 deny gbrowse2-beta
 #cache_peer_access gb2 deny gbrowse2_static-beta
@@ -1809,7 +1810,7 @@ cache deny wiki
 cache deny blog
 cache deny feedback
 cache deny rss
-
+cache deny beta-site
 
 
 # We strongly recommend the following be uncommented to protect innocent
