consolidating old code

--- a/squid/etc/squid3-basic.conf
+++ b/squid/etc/squid3-basic.conf
@@ -649,8 +649,8 @@ acl gbrowse2_static url_regex gbrowse2/images gb2-support gbrowse2/css gbrowse2/
 # GBrowse2 (beta site)
 #gb2-support gbrowse2/css gbrowse2/js
 #browse2/i db/gb2 gbrowse_img gb2
-acl gbrowse2-beta        url_regex tools/genome  # cgi
-acl gbrowse2_static-beta url_regex gbrowse2/i    # images
+#acl gbrowse2-beta        url_regex tools/genome  # cgi
+#acl gbrowse2_static-beta url_regex gbrowse2/i    # images
 
 # Synteny Browser
 acl synteny url_regex gbrowse_syn synteny gbrowse/tmp/compara
@@ -1641,38 +1641,12 @@ cache_peer_access beta-local  allow beta-site
 cache_peer_access beta-local  deny all
 
 
-#cache_peer_access wb-web10 deny gbrowse2-beta
-#cache_peer_access wb-web10 deny gbrowse2_static-beta
-#cache_peer_access wb-web10 allow beta-site
-#cache_peer_access wb-web10 deny all
-
-#cache_peer_access wb-web6  deny gbrowse2-beta
-#cache_peer_access wb-web6  deny gbrowse2_static-beta
-#cache_peer_access wb-web6  allow beta-site
-#cache_peer_access wb-web6  deny all
-
-#cache_peer_access wb-web7  deny gbrowse2-beta
-#cache_peer_access wb-web7  deny gbrowse2_static-beta
-#cache_peer_access wb-web7  allow beta-site
-#cache_peer_access wb-web7  deny all
-
-#cache_peer_access wb-web8  deny gbrowse2-beta
-#cache_peer_access wb-web8  deny gbrowse2_static-beta
-#cache_peer_access wb-web8  allow beta-site
-#cache_peer_access wb-web8  deny all
-
-#cache_peer_access wb-web9  deny gbrowse2-beta
-#cache_peer_access wb-web9  deny gbrowse2_static-beta
-#cache_peer_access wb-web9  allow beta-site
-#cache_peer_access wb-web9  deny all
-
-
 # Special cases: allow from its like-named ACL; deny from all others
 # GBrowse2
 cache_peer_access gb1 allow gbrowse2
 cache_peer_access gb1 allow gbrowse2_static
-cache_peer_access gb1 deny gbrowse2-beta
-cache_peer_access gb1 deny gbrowse2_static-beta
+#cache_peer_access gb1 deny gbrowse2-beta
+#cache_peer_access gb1 deny gbrowse2_static-beta
 cache_peer_access gb1 deny all
 #cache_peer_access gb2 deny gbrowse2-beta
 #cache_peer_access gb2 deny gbrowse2_static-beta
