more tweaks for running the proxy in the cloud

--- a/nginx/production/nginx.conf
+++ b/nginx/production/nginx.conf
@@ -1,5 +1,5 @@
 user daemon;
-worker_processes  30;
+worker_processes  5;
 daemon on;
 
 # Error log; other directives: notice | info
@@ -41,15 +41,18 @@ http {
     # Simple load-balancing.
     # Define as many servers as we like (and weight them)
     upstream wormbase-classic  {
-       # cloud instance (for emergencies)
-#       server ec2-184-73-48-207.compute-1.amazonaws.com weight=10 max_fails=2000 fail_timeout=1m;
+       # EC2 reserved instance (for emergencies)
+#       server ec2-107-20-33-130.compute-1.amazonaws.com weight=10 max_fails=2000 fail_timeout=1m;
+       server 50.19.229.229        weight=10 max_fails=2000 fail_timeout=1m;
+       server 206.108.125.175:8080 weight=10 max_fails=200  fail_timeout=1m;
 
        # web1, 2, 3, 4, mining
-       server 206.108.125.175:8080 weight=10 max_fails=2000 fail_timeout=30s;
-       server 206.108.125.177:8080 weight=10 max_fails=2000 fail_timeout=30s;
-       server 206.108.125.190:8080 weight=10 max_fails=2000 fail_timeout=30s;
-       server 206.108.125.168:8080 weight=10 max_fails=2000 fail_timeout=30s;
-#       server 206.108.125.178:8080 weight=10 max_fails=2000 fail_timeout=1m;
+       server 206.108.125.175:8080 backup;
+#       server 206.108.125.175:8080 weight=10 max_fails=200 fail_timeout=30s;
+#       server 206.108.125.177:8080 weight=10 max_fails=200 fail_timeout=30s;
+#       server 206.108.125.190:8080 weight=10 max_fails=200 fail_timeout=30s;
+#       server 206.108.125.168:8080 weight=10 max_fails=200 fail_timeout=30s;
+#       server 206.108.125.178:8080 weight=10 max_fails=200 fail_timeout=30s;
     }
 
     # Load-balancing against a pool of starman sockets.
@@ -69,13 +72,16 @@ http {
 #       server 206.108.125.178:5000 weight=10 max_fails=2000 fail_timeout=1m;
 
        # web7,8,9,10
-       server 206.108.125.164:5000 weight=10 max_fails=2000 fail_timeout=1m;
-       server 206.108.125.163:5000 weight=10 max_fails=2000 fail_timeout=1m;
-       server 206.108.125.162:5000 weight=10 max_fails=2000 fail_timeout=1m;
-       server 206.108.125.166:5000 weight=10 max_fails=2000 fail_timeout=1m;
+#       server 206.108.125.164:5000 weight=10 max_fails=2000 fail_timeout=1m;
+#       server 206.108.125.163:5000 weight=10 max_fails=2000 fail_timeout=1m;
+#       server 206.108.125.162:5000 weight=10 max_fails=2000 fail_timeout=1m;
+#       server 206.108.125.166:5000 weight=10 max_fails=2000 fail_timeout=1m;
 
        # web6 (165) is our dedicated couch server, but we can use it as a backup if needed.
-       server 206.108.125.165:5000 backup;
+#       server 206.108.125.165:5000 backup;
+	
+	# Or just on amazon
+	server 50.19.229.229:5000 weight=10 max_fails=2000 fail_timeout=1m;
     }
 
 
@@ -91,17 +97,23 @@ http {
     }              
 
     sendfile        on;
-    #tcp_nopush     on;
+    tcp_nopush      on;
 
-    #keepalive_timeout  0;
-    keepalive_timeout  65;
+    # TESTING OFF
+    #tcp_nodelay     on;
+
+    # TESTING AT 0: no keep-alive
+    keepalive_timeout  0;
+    #keepalive_timeout  65;
 
     # Suitable proxy defaults
     # Maximum time to connect to upstream servers
     proxy_connect_timeout           75s;
-    # Maximum time to receive a response from upstream servers
+    # Maximum time to receive a response from upstream servers between read events
     proxy_read_timeout              60s;
-    proxy_send_timeout              120s;
+
+
+    proxy_send_timeout              60s;
     proxy_buffer_size               4k;
     proxy_buffers                   4 32k;
     proxy_busy_buffers_size         64k;
@@ -157,9 +169,9 @@ http {
 	   listen      80;
 	   
            # Logs
-	   access_log /usr/local/wormbase/logs/www-cache_log cache;
-      	   access_log /usr/local/wormbase/logs/www-access_log main;
-      	   error_log  /usr/local/wormbase/logs/www-error_log warn;
+	   access_log /usr/local/wormbase/logs/www-cache_log cache buffer=16k;
+      	   access_log /usr/local/wormbase/logs/www-access_log main buffer=16k;
+      	   error_log  /usr/local/wormbase/logs/www-error_log warn  buffer=16k;
 
 	   # gzip compression
       	   # Turn off if we're sitting behind a caching server.
@@ -170,6 +182,12 @@ http {
 
       	   include       mime.types;
       	   default_type  application/octet-stream;
+
+    proxy_set_header Host $http_host;
+    proxy_set_header X-Forwarded-Host $http_host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Connection Close;
 
  	   # LOCKDOWN: only requests to our host are allowed
 	   if ($host !~ ^(wormbase.org|www.wormbase.org)$ ) {      	   
@@ -194,6 +212,10 @@ http {
  	      rewrite blog(.*) http://blog.wormbase.org$1 permanent;
            }
 
+      	   location /biomart/martview {
+ 	      rewrite ^ http://caprica.caltech.edu:9002/biomart/martview permanent;
+           }
+
            # error_page  404              /404.html;
 
            # redirect server error pages to the static page /50x.html           
@@ -206,11 +228,26 @@ http {
            #        return 503;
            #      }
 
-           # Status information at /status
-           location = /status {
+           # Raw status information at /status
+           location /stats/nginx/raw {
                 stub_status on;
                 allow  65.219.130.69;                
-                deny all;
+		allow  10.245.30.22;
+                deny   all;
+           }
+
+           location /stats/nginx {
+#                allow  65.219.130.69;
+#                deny   all;
+		 allow all;
+		root  /usr/local/wormbase/website-admin/nginx/production;
+           }
+
+           location /stats/apache {
+#                allow  65.219.130.69;                
+#                deny   all;
+		 allow all;
+		 proxy_pass http://wormbase-classic;
            }
 
            location / {
@@ -228,11 +265,11 @@ http {
 #	        proxy_pass http://wormbase-classic;
             }
 
-            # Mining specific requests
-            location /db/get {
-                 proxy_pass http://206.108.125.178:8080/db/get;
-#	        proxy_pass http://wormbase-classic;
-            }
+            # Mining specific requests: this could go to api.wormbase.org
+#            location /db/get {
+#                 proxy_pass http://206.108.125.178:8080/db/get;
+##	        proxy_pass http://wormbase-classic;
+#            }
 
             location /db/searches/aql_query {
                 proxy_pass http://206.108.125.178:8080/db/searches/aql_query;
@@ -279,26 +316,26 @@ http {
 #	        proxy_pass http://wormbase-classic;
             }
 
-	    # Dynamic images. This a really tedious way of doing this.
-	    location /dynamic_images/wb-web1 {
-	        proxy_pass http://206.108.125.175:8080/;
-#	        proxy_pass http://wormbase-classic;
-            }
-
-	    location /dynamic_images/wb-web2 {
-	        proxy_pass http://206.108.125.177:8080/;
-#	        proxy_pass http://wormbase-classic;
-            }
-
-	    location /dynamic_images/wb-web3 {
-	        proxy_pass http://206.108.125.190:8080/;
-#	        proxy_pass http://wormbase-classic;
-            }
-
-	    location /dynamic_images/wb-web4 {
-	        proxy_pass http://206.108.125.168:8080/;
-#	        proxy_pass http://wormbase-classic;
-            }
+#	    # Dynamic images. This a really tedious way of doing this.
+#	    location /dynamic_images/wb-web1 {
+#	        proxy_pass http://206.108.125.175:8080/;
+##	        proxy_pass http://wormbase-classic;
+#            }
+#
+#	    location /dynamic_images/wb-web2 {
+#	        proxy_pass http://206.108.125.177:8080/;
+##	        proxy_pass http://wormbase-classic;
+#            }
+#
+#	    location /dynamic_images/wb-web3 {
+#	        proxy_pass http://206.108.125.190:8080/;
+##	        proxy_pass http://wormbase-classic;
+#            }
+#
+#	    location /dynamic_images/wb-web4 {
+#	        proxy_pass http://206.108.125.168:8080/;
+##	        proxy_pass http://wormbase-classic;
+#            }
 
 	    location /dynamic_images/wb-mining {
 	        proxy_pass http://206.108.125.178:8080/;
@@ -489,12 +526,18 @@ http {
       # root   html;
       # }
 
-      # System Maintenance (Service Unavailable) 
-      # Config broken?
-#      if (-f $document_root/system_maintenance.html ) {
-#        error_page 503 /system_maintenance.html;
-#        return 503;
-#      }
+      location /errors/system_maintenance.html {
+          root /usr/local/wormbase/website;
+      }
+
+      # System Maintenance (Service Unavailable)       
+      #if (-f /usr/local/wormbase/system_maintenance.html ) {
+      error_page 502 /errors/system_maintenance.html;
+       #     return 502;
+       #}
+
+      
+
 
       # Show status information on /status
       location = /status {
@@ -632,7 +675,8 @@ http {
   ##################################
   #
   #  api.wormbase.org
-  #     Distribbute requests for now.
+  #      Send API requests to a dedicated host
+  #      206.108.125. 
   # 
   ##################################
   server {
