--- a/update/staging/xapian/settings.conf
+++ b/update/staging/xapian/settings.conf
@@ -43,6 +43,7 @@ classes = (   { filename = "Paper.ace";
                 desc = ("genotype", "remark"); },
               { filename = "Structure_data.ace"; },
               { filename = "Transgene.ace"; },
+              { filename = "Transcript.ace"; },
               { filename = "Analysis.ace"; 
                 desc = ("title", "description"); },
               { filename = "Gene_class.ace"; },
