small fixes for the log processing

--- a/nginx/production/nginx.conf
+++ b/nginx/production/nginx.conf
@@ -280,10 +280,10 @@ http {
             }
 
             # Mining specific requests: this could go to api.wormbase.org
-#            location /db/get {
-#                 proxy_pass http://206.108.125.178:8080/db/get;
-##	        proxy_pass http://wormbase-classic;
-#            }
+            location /db/get {
+                 proxy_pass http://206.108.125.178:8080/db/get;
+#	        proxy_pass http://wormbase-classic;
+            }
 
             location /db/searches/aql_query {
                 proxy_pass http://206.108.125.178:8080/db/searches/aql_query;
@@ -330,17 +330,17 @@ http {
 #	        proxy_pass http://wormbase-classic;
             }
 
-#	    # Dynamic images. This a really tedious way of doing this.
-#	    location /dynamic_images/wb-web1 {
-#	        proxy_pass http://206.108.125.175:8080/;
-##	        proxy_pass http://wormbase-classic;
-#            }
-#
+	    # Dynamic images. This a really tedious way of doing this.
+	    location /dynamic_images/wb-web1 {
+	        proxy_pass http://206.108.125.175:8080/;
+#	        proxy_pass http://wormbase-classic;
+            }
+
 #	    location /dynamic_images/wb-web2 {
 #	        proxy_pass http://206.108.125.177:8080/;
 ##	        proxy_pass http://wormbase-classic;
 #            }
-#
+
 #	    location /dynamic_images/wb-web3 {
 #	        proxy_pass http://206.108.125.190:8080/;
 ##	        proxy_pass http://wormbase-classic;
@@ -361,7 +361,7 @@ http {
 #        }
 
 	# GBrowse support: this could probably be simplified.
-        location /db/gb2 {
+       location /db/gb2 {
              proxy_pass http://206.108.125.173:80;
 #	        proxy_pass http://wormbase-classic;
         }
