Cache standardization. Couch CHI driver and more comprehensive agent. Misc.
* CouchAgent takes over for CouchDB model now. Includes some specific
  HTTP error handling and a fallback for future error handling. Uses
  docs and not the attachments.

* Couch CHI driver and the agent have tests. The driver passes the CHI
  tests (all ~1000 of them).

* Web's set_cache and check_cache are simpler as a result of the CHI
  driver. They also have a slightly simpler interface (no need to pass
  an anon hashref each time).

* Drawn pictures no longer cache in Couch (not good for binary data
  w/o attachments).

* Config file has been changed slightly to encapsulate the caching
  options and provide finer-grain control over what is enabled.

* Cache logging (by CHI) now goes to logs/cache.log for development
  and staging (see log4perl confs).  Otherwise will show up in the
  usual Catalyst log.

* Dynamic config now does not require a special BEGIN block and
  symbol-table foolery.

* URI::Escape::XS (high perf) and Log::Any::Adapter::Log4perl have
  been added as dependencies.

Problem(s):

* Namespace must be dynamically set for CHI drivers. This is an issue
  for Couch, for which we would like to have the Ace version as the
  namespace.  Namespace is read-only in CHI::Driver at the moment and
  so cannot be lazily determined for other built-in CHI drivers.

* Pictures are still being cached. They probably shouldn't be. In
  production, the web server or a reverse proxy will likely serve the
  files up directly anyway through some rewrites.

--- a/log4perl/staging.conf
+++ b/log4perl/staging.conf
@@ -8,6 +8,14 @@ log4perl.appender.logfile.mode=append
 log4perl.appender.logfile.layout=PatternLayout
 log4perl.appender.logfile.layout.ConversionPattern=[%d] [WB] [%p] %m%n
 
+# separate logger for cache
+log4perl.logger.CHI=DEBUG, cache
+log4perl.appender.cache=Log::Log4perl::Appender::File
+log4perl.appender.cache.filename=logs/cache.log
+log4perl.appender.cache.mode=append
+log4perl.appender.cache.layout=PatternLayout
+log4perl.appender.cache.layout.ConversionPattern=[%d] [%p] %m%n
+
 # Controller errors - let's only look for warnings
 #log4perl.logger.wormBase.web.Controller=WARN
 
