fixed problem that was breaking monthly log concatenation

--- a/nginx/production/nginx.conf
+++ b/nginx/production/nginx.conf
@@ -107,7 +107,7 @@ http {
     # Maximum time to connect to upstream servers
     proxy_connect_timeout           75s;
     # Maximum time to receive a response from upstream servers between read events
-    proxy_read_timeout              60s;
+    proxy_read_timeout              120s;
 
 
     proxy_send_timeout              60s;
@@ -213,17 +213,11 @@ http {
  	      rewrite ^ http://caprica.caltech.edu:9002/biomart/martview permanent;
            }
 
-           # error_page  404              /404.html;
+
+               # error_page  404              /404.html;
 
            # redirect server error pages to the static page /50x.html           
            # error_page   500 502 503 504  /50x.html;
-
-           # System Maintenance (Service Unavailable) 
-           # Config broken?
-           # if (-f $document_root/system_maintenance.html ) {
-           #        error_page 503 /system_maintenance.html;
-           #        return 503;
-           #      }
 
 
            # Raw status information at /status
@@ -256,7 +250,18 @@ http {
 		 proxy_pass http://206.108.125.175:8080;
            }
 
+
+           error_page 503 /system_maintenance.html;
+
            location / {
+
+     	       ###############################
+	       #  Maintenance mode
+	       ###############################
+               if (-f /usr/local/wormbase/website/classic/html/system_maintenance.html) {
+                    return 503;
+               }
+ 
                if ($args ~* "%253bbs-1") {
 	          rewrite ^ "http://www.wormbase.org/db/gene/gene?name=bbs-1;class=Gene" permanent;
 	       }
@@ -267,6 +272,11 @@ http {
 
 	        proxy_pass http://wormbase-classic;
             }
+
+            location = /system_maintenance.html {
+              root /usr/local/wormbase/website/classic/html/;
+              internal;
+           }
 
 	    # Serve static files directly from nginx
             location /stylesheets {
