added mining to the pool

--- a/nginx/production/nginx.conf
+++ b/nginx/production/nginx.conf
@@ -35,25 +35,50 @@ http {
                      'Expires: $upstream_http_expires '
                      '"$request" ($status) '
 		     '"$http_user_agent" ';
- 
- 
-    # Load-balancing against a pool of fastcgi TCP sockets.
-    # Simple load-balancing.
-    # Define as many servers as we like (and weight them)
-    upstream wormbase-classic  {
-       # EC2 reserved instance (for emergencies)
-#       server ec2-107-20-33-130.compute-1.amazonaws.com weight=10 max_fails=2000 fail_timeout=1m;
-       server 50.19.229.229        weight=10 max_fails=2000 fail_timeout=1m;
-       server 206.108.125.175:8080 weight=10 max_fails=200  fail_timeout=1m;
-
-       # web1, 2, 3, 4, mining
-#       server 206.108.125.175:8080 backup;
-#       server 206.108.125.175:8080 weight=10 max_fails=200 fail_timeout=30s;
-#       server 206.108.125.177:8080 weight=10 max_fails=200 fail_timeout=30s;
-#       server 206.108.125.190:8080 weight=10 max_fails=200 fail_timeout=30s;
-#       server 206.108.125.168:8080 weight=10 max_fails=200 fail_timeout=30s;
-#       server 206.108.125.178:8080 weight=10 max_fails=200 fail_timeout=30s;
+  
+    # The staging and qa/qc machine
+    upstream wormbase-staging {
+       # aka wb-web7 @ oicr
+       server 206.108.125.164:8080        weight=10 max_fails=2000 fail_timeout=1m;
     }
+
+    # The classic website
+    upstream wormbase-classic  {
+       # EC2 reserved instance
+       server 50.19.229.229        weight=10 max_fails=2000 fail_timeout=1m;
+
+       # web1 @ oicr
+#       server 206.108.125.175:8080 weight=10 max_fails=200  fail_timeout=1m;
+
+       # wb-mining @ oicr
+       server 206.108.125.178:8080 weight=10 max_fails=200  fail_timeout=1m;
+    }
+
+   # social services like the blog, wiki, and forums
+   # Either at OICR or on EC2
+   upstream wormbase-social {
+      # EC2 
+#      server 50.19.229.229        weight=10 max_fails=20000 fail_timeout=1m;
+
+      # wb-social @ OICR
+      server 206.108.125.176      weight=10 max_fails=2000 fail_timeout=1m; 
+    }
+
+    upstream wormbase-gbrowse {
+       # EC2
+        server 50.19.229.229        weight=10 max_fails=2000 fail_timeout=1m;
+
+        # OICR dedicated
+#         server 206.108.125.173      weight=10 max_fails=2000 fail_timeout=1m; 
+
+       # wb-mining @ oicr
+#       server 206.108.125.178:8080 weight=10 max_fails=200  fail_timeout=1m;
+    }
+
+    upstream wormbase-mining {
+       server 206.108.125.178:8080 weight=10 max_fails=200  fail_timeout=1m;
+    }
+
 
     # Load-balancing against a pool of starman sockets.
     # Define as many servers as we have here and weight them.
@@ -65,14 +90,17 @@ http {
        # act as a starman server.
 #       server 206.108.125.175:5000 weight=10 max_fails=2000 fail_timeout=1m;
 
-       # web2,3,4,mining
+       # web2
        server 206.108.125.177:5000 weight=10 max_fails=2000 fail_timeout=1m;
-#       server 206.108.125.190:5000 weight=10 max_fails=2000 fail_timeout=1m;
-#       server 206.108.125.168:5000 weight=10 max_fails=2000 fail_timeout=1m;
-#       server 206.108.125.178:5000 weight=10 max_fails=2000 fail_timeout=1m;
 
-       # web7,8,9,10
-#       server 206.108.125.164:5000 weight=10 max_fails=2000 fail_timeout=1m;
+       # web3
+#       server 206.108.125.190:5000 weight=10 max_fails=2000 fail_timeout=1m;
+
+	# web4
+#       server 206.108.125.168:5000 weight=10 max_fails=2000 fail_timeout=1m;
+
+	# mining
+#       server 206.108.125.178:5000 weight=10 max_fails=2000 fail_timeout=1m;
 
        # web6 (165) is our dedicated couch server, but we can use it as a backup if needed.
 #       server 206.108.125.165:5000 backup;
@@ -372,38 +400,32 @@ http {
 
 	# GBrowse support: this could probably be simplified.
        location /db/gb2 {
-             proxy_pass http://206.108.125.173:80;
-#	        proxy_pass http://wormbase-classic;
+	        proxy_pass http://wormbase-gbrowse;
         }
 
         location /gbrowse2 {
-             proxy_pass http://206.108.125.173:80;
-#	        proxy_pass http://wormbase-classic;
+	        proxy_pass http://wormbase-gbrowse;
         }
 
         location /gb2-support {
-             proxy_pass http://206.108.125.173:80;
-#	        proxy_pass http://wormbase-classic;
+		proxy_pass http://wormbase-gbrowse;
         }
 
         location /gbrowse2/css {
-             proxy_pass http://206.108.125.173:80;
-#	        proxy_pass http://wormbase-classic;
+	        proxy_pass http://wormbase-gbrowse;
+#		proxy_pass http://wormbase-classic;
         }
 
         location gbrowse2/js {
-             proxy_pass http://206.108.125.173:80;
-#	        proxy_pass http://wormbase-classic;
+	        proxy_pass http://wormbase-gbrowse;
         }
 
         location /gbrowse2/i/ {
-             proxy_pass http://206.108.125.173:80;
-#	        proxy_pass http://wormbase-classic;
+	        proxy_pass http://wormbase-gbrowse;
         }
 
         location gbrowse_img {
-             proxy_pass http://206.108.125.173:80;
-#	        proxy_pass http://wormbase-classic;
+	        proxy_pass http://wormbase-gbrowse;
         }
   }
 
@@ -440,7 +462,8 @@ http {
        access_log /usr/local/wormbase/logs/forum/access_log main;
        error_log  /usr/local/wormbase/logs/forum/error_log warn;
        location / {
-	    proxy_pass http://206.108.125.176/;
+#	    proxy_pass http://206.108.125.176/;
+	    proxy_pass http://wormbase-social;
        }
   }
 
@@ -1054,18 +1077,6 @@ server {
               return 444;
       	   }
       
-	   # Forums, blog, and wiki (all legacy as these are now subdomains)
-      	   location /forums {
- 	      rewrite forums(.*) http://forums.wormbase.org$1 permanent;
-           }
-
-           location /wiki {
- 	      rewrite wiki(.*) http://wiki.wormbase.org$1 permanent;
-           }
-
-      	   location /blog {
- 	      rewrite blog(.*) http://blog.wormbase.org$1 permanent;
-           }
 
       	   location /biomart/martview {
  	      rewrite ^ http://caprica.caltech.edu:9002/biomart/martview permanent;
@@ -1084,55 +1095,8 @@ server {
            #      }
 	  
            location / {
-	        proxy_pass http://206.108.125.164:8080;
+	        proxy_pass http://wormbase-staging;
             }
-
-	    # Serve static files directly from nginx
-            location /stylesheets {
-                 root  /usr/local/wormbase/website/classic/html;
-#   	          proxy_pass http://wormbase-classic;
-            }
-
-            location /js {
-                 root  /usr/local/wormbase/website/classic/html;
-#	        proxy_pass http://wormbase-classic;
-            }
-
-	# GBrowse support: this could probably be simplified.
-        location /db/gb2 {
-             proxy_pass http://206.108.125.173:80;
-#	        proxy_pass http://wormbase-classic;
-        }
-
-        location /gbrowse2 {
-             proxy_pass http://206.108.125.173:80;
-#	        proxy_pass http://wormbase-classic;
-        }
-
-        location /gb2-support {
-             proxy_pass http://206.108.125.173:80;
-#	        proxy_pass http://wormbase-classic;
-        }
-
-        location /gbrowse2/css {
-             proxy_pass http://206.108.125.173:80;
-#	        proxy_pass http://wormbase-classic;
-        }
-
-        location gbrowse2/js {
-             proxy_pass http://206.108.125.173:80;
-#	        proxy_pass http://wormbase-classic;
-        }
-
-        location /gbrowse2/i/ {
-             proxy_pass http://206.108.125.173:80;
-#	        proxy_pass http://wormbase-classic;
-        }
-
-        location gbrowse_img {
-             proxy_pass http://206.108.125.173:80;
-#	        proxy_pass http://wormbase-classic;
-        }
     }
 
 
